In Draw/Impress, applying numbering to previously bulleted line, and then undoing this without leaving editor window, shows list decoration wrong: small displaces numbering instead of bullet (under Windows) or regular numbering (under Linux). Steps to reproduce: 1. In a Draw drawing, add a Text Box (F2) 2. Type some characters, then apply Bullets 3. Now apply Numbering using sidebar or toolbar (*not* using menu Format->Bullets and Numbering...) 4. Undo (if toolbar item is disabled (in some versions), then use menu Edit->Undo or Ctrl+Z) - observe the described problem in list item formatting 5. Now leave the Text Box editor by clicking outside of it, observe that the bullet is displayed correctly Tested with 4.1.0.0.beta2 - 5.1.4.2 and current master under Windows and Ubuntu.
Version: 5.3.0.0.alpha0+ Build ID: ef47ce2397d4ed453fe01d994d13a13f442ec3bb CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; Locale: en-US (en_US.UTF-8) Confirmed.
Taking.
Mike Kaganski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a9c151e6eeb3c81902fab2644522a8df9e7161d tdf#100734: Update bullet of paragraph on UNDO It will be available in 5.3.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Mike Kaganski committed a patch related to this issue. It has been pushed to "libreoffice-5-2": http://cgit.freedesktop.org/libreoffice/core/commit/?id=79e3fd9df519bc5aad349f137d4aa74168e9ef2e&h=libreoffice-5-2 tdf#100734: Update bullet of paragraph on UNDO It will be available in 5.2.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?