tdf#100734: Update bullet of paragraph on UNDO

Change-Id: I1afe0b4ca537eea752d3bced8bbc8944380c3514
Reviewed-on: https://gerrit.libreoffice.org/26874
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 3a9c151e6eeb3c81902fab2644522a8df9e7161d)
Reviewed-on: https://gerrit.libreoffice.org/26893
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>